@@ -1,5 +1,6 @@
 2012-05-01  Xavier Perseguers  <xavier@causal.ch>
 
+	* [TASK] Optimize the configuration initialization
 	* [BUGFIX] Invalid calculation of generation time
 	* [TASK] Add WS debugging information
 
